@@ -22,13 +22,13 @@ describe Puppet::Type.type(:gnupg_key) do
   end
 
   it 'should accept ownertrust_key numeric value' do
-    @gnupg_key[:ownertrust_key] = 6
-    expect(@gnupg_key[:ownertrust_key]).to eq 6
+    @gnupg_key[:ownertrust_key] = "6"
+    expect(@gnupg_key[:ownertrust_key]).to eq "6"
   end
 
   it 'should not accept ownertrust_key out of range numeric value' do
     expect {
-      @gnupg_key[:ownertrust_key] = 9 
+      @gnupg_key[:ownertrust_key] = "9"
     }.to raise_error(Puppet::Error, /Invalid value for ownertrust_key*/)
   end
 
