@@ -1,3 +1,7 @@
+2017-10-02 - James Downs <james.downs@salesforce.com> - 1.3.1
+* all values are strings in this version of puppet, so handle
+  the ownerkey values appropriately
+
 2017-09-26 - James Downs <james.downs@salesforce.com> - 1.3.0
 * add ownertrust_key parameter & unit tests
   values: false, 2-6, matching (Undefined, Never, Marginal, Full, Ultimate)
